增加第三方包